implement sleeping module

--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
     <!-- The line below must be kept intact for Sencha Command to build your application -->
     <script src="local_storage_manager.js" type="text/javascript">
     </script>
+    <script src="app/utils/utils.js" type="text/javascript">
+    </script>
     <script id="microloader" type="text/javascript" src=".sencha/app/microloader/development.js">
     </script>
 </head>
